--- a/tarjetas.css
+++ b/tarjetas.css
@@ -1,5 +1,11 @@
+
+/*:root{
+    /*
+}
+
 .server-card {
-    border: 1px solid #ccc;
+    border: 1px solid white;
+    background-color:rgb(119, 14, 14);
     padding: 10px;
     width: 300px;
     text-align: center;
@@ -12,5 +18,17 @@
     font-size: 16px;
 }
 .server-ip {
-    font-size: 14px;
+    font-size: 16px;
 }
+*/
+
+* {
+    /* modelo de caja alternativo */
+    box-sizing: border-box;
+}
+
+html, body, h1, h2, h3, p, figure, ul, li {
+    margin: 0;
+    padding: 0;
+}
+
