--- a/tarjetas.css
+++ b/tarjetas.css
@@ -1,27 +1,3 @@
-
-/*:root{
-    /*
-}
-
-.server-card {
-    border: 1px solid white;
-    background-color:rgb(119, 14, 14);
-    padding: 10px;
-    width: 300px;
-    text-align: center;
-}
-.server-name {
-    font-size: 20px;
-    font-weight: bold;
-}
-.server-players {
-    font-size: 16px;
-}
-.server-ip {
-    font-size: 16px;
-}
-*/
-
 * {
     /* modelo de caja alternativo */
     box-sizing: border-box;
@@ -30,5 +6,72 @@
 html, body, h1, h2, h3, p, figure, ul, li {
     margin: 0;
     padding: 0;
+}
+/* para que el footer quede abajo del todo
+html, body{
+    width: 100%;
+
+}
+body{
+    display: flex;
+    flex-direction:column; 
+}
+main{
+    flex-grow: 1;
+}
+*/
+
+
+header{
+    display: flex;
+    flex-direction: column;
+}
+
+.img-principal img{
+    display: flex;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    
+}
+
+.servers-global{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+.card {
+    border: 2px solid rgb(127, 22, 22);
+    background-color:rgb(186, 26, 26);
+    padding: 50px;
+    width: 300px;
+    text-align: center;
+}
+
+.card__name {
+    font-size: 20px;
+    font-weight: bold;
+}
+.card__players {
+    font-size: 16px;
+}
+.card__ip {
+    font-size: 16px;
+}
+.card__link{
+    font-size: 16px;
+    
+}
+
+.footer_gral{
+    display: flex;
+    flex-direction: column;
+    background-color: brown;
+    align-items: center;
+    
+    gap: 10px;
+    
 }
 
