--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ main{
 
   .formulario-titulo{
     color: #0d0d0d;
+    margin-bottom: 10px;
   }
   
   .consulta__texto{
@@ -261,11 +262,8 @@ main{
   }
   
   .consulta-campo__completar{
-    margin: 20px;
     width: 100%;
     padding: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
